--- a/airbnb/src/index.css
+++ b/airbnb/src/index.css
@@ -1,14 +1,104 @@
 .nav {
-    height: 70px;
+    display: flex;
+    height: 60px;
     box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
-    top: 0;
-    left: 0;
-    position: fixed;
-    width: 100%;
+    padding: 20px 36px;
 }
    
-
 .nav__logo {
-    height: 70px;
+    height: 60px;
     display: flex;
 }
+
+section {
+    padding: 40px;
+    max-width: 100%;
+
+}
+.hero{
+    display: flex;
+    flex-direction: column;
+}
+.hero__img {
+    max-width: 600px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.hero__title {
+    text-align: center;
+    padding-top: 10px;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 110%;
+}
+
+.hero__content {
+    text-align: center;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 110%;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.gray {
+    color: #918E9B;
+}
+
+.cards_list {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 20px;
+    overflow-x: auto;
+    justify-content: center;
+    
+}
+
+.card {
+    width: 175px;
+    flex: 0 0 auto;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.card__image {
+    width: 100%;
+    border-radius: 9px;
+    margin-bottom: 9px;
+}
+
+.card__title {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.card__stats {
+    display: flex;
+    align-items: center;
+}
+
+.card__price {
+    margin-top: auto;
+}
+
+.card__badge {
+    position: absolute;
+    top: 6px;
+    left: 6px;
+    background-color: white;
+    padding: 5px 7px;
+    border-radius: 2px;
+    font-weight: bold;
+}
+
+
+
+
+
+
+
