--- a/airbnb/src/index.css
+++ b/airbnb/src/index.css
@@ -1,13 +1,14 @@
 .nav {
     display: flex;
-    height: 60px;
+    height: 70px;
     box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
-    padding: 20px 36px;
+    width: 100%;
 }
    
 .nav__logo {
     height: 60px;
     display: flex;
+    padding-left: 30px;
 }
 
 section {
@@ -18,6 +19,7 @@ section {
 .hero{
     display: flex;
     flex-direction: column;
+    
 }
 .hero__img {
     max-width: 600px;
@@ -28,7 +30,7 @@ section {
 
 .hero__title {
     text-align: center;
-    padding-top: 10px;
+    padding-top: 25px;
     font-weight: 600;
     font-size: 36px;
     line-height: 110%;
@@ -39,6 +41,7 @@ section {
     font-weight: 300;
     font-size: 20px;
     line-height: 110%;
+    
 }
 
 .bold {
@@ -50,6 +53,7 @@ section {
 }
 
 .cards_list {
+    margin-top: -30px;
     display: flex;
     flex-wrap: nowrap;
     gap: 20px;
@@ -96,7 +100,13 @@ section {
     font-weight: bold;
 }
 
+.footer__content {
+    margin-bottom: -50px;
+    padding-bottom: 0;
+    text-align: center;
+    font-weight: 400;
 
+}
 
 
 
