--- a/travel_journal/src/index.css
+++ b/travel_journal/src/index.css
@@ -1,41 +1,34 @@
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Inter', sans-serif;
+}
 
 .header {
-    position: absolute;
-    width: 550px;
-    height: 55px;
-    left: 0px;
-    top: 0px;
-    margin-left: 38%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 45px;
+    padding: 15px 0;
 
-    background: #F55A5A;
-    margin-bottom: 45px;
     border-radius: 5px;
+    background: #F55A5A;
 }
 
 .header__logo {
-    position: absolute;
-    width: 24px;
-    height: 24px;
-    left: 213px;
-    top: 16px;
+    width: 40px;
+    height: 40px;
 
     border-radius: 30px;
     background: #FFFFFF;
 }
 
 .header__text {
-    position: absolute;
-    width: 109px;
-    height: 16px;
-    left: 244px;
-    top: 0px;
-    
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
+    font-size: 14px;
     font-weight: 500;
-    font-size: 14.4608px;
-    line-height: 18px;
-    letter-spacing: -0.075em;
-    
+    margin: 0 0 0 10px;
+
     color: #FFFFFF;
 }
 
@@ -46,16 +39,18 @@ img {
 }
 
 .img__div {
+    display: flex;
     padding: 20px 40px;
 
 }
 
 .main {
     display: flex;
-    width: 550px;
-    margin-top: 70px;
-    margin-left: 38%;
-    background-color: white;
+    align-items: center;
+    margin: 35px 10px;
+
+    border-bottom: 1px dashed black;
+    border-top: 1px dashed black;
     border-radius: 5px;
 }
 
@@ -66,26 +61,23 @@ img {
     margin: 0;
 }
 
-.main__div {
-    position: relative;
-    top: -5px;
-}
-
 a {
-    padding: 20px 12px;
-
+    display: flex;
+    align-items: center;
+    padding: 0 12px;
+    
     color: #918E9B;
     font-family: 'Inter';
 
 }
 
 h1 {
-    margin-top: -15px;
-    margin-bottom: 18px;
     font-family: "Inter";
+    margin-top: -6px;
 }
 
 .main__description {
+    display: flex;
     margin-top: 8px;
     font-family: 'Inter';
     font-weight: 400;
@@ -106,3 +98,45 @@ span {
     font-weight: 700;
 }
 
+@media screen and (max-width: 500px) {
+    .header {
+        height: 35px;
+    }
+    .header__logo {
+        width: 25px;
+        height: 25px;
+    }
+
+    .header__text {
+        font-size: 12px;
+    }
+
+    .main {
+        flex-direction: row;
+        align-items: center;
+    }
+    .main__img {
+        width: 125px;
+    }
+
+    h1 {
+        font-size: 16px;
+        margin-top: -4px;
+    }
+    
+    a {
+        font-size: 13px;
+    }
+
+    span {
+        font-size: 12px;
+    }
+
+    p {
+        font-size: 12px;
+    }
+
+    h4 {
+        font-size: 12px;
+    }
+}
