--- a/airbnb/src/index.css
+++ b/airbnb/src/index.css
@@ -1,21 +1,40 @@
+body {
+    padding: 0;
+    margin: 0;
+    height: 100%;
+
+    font-family: "Inter" sans-serif;
+}
 .nav {
     display: flex;
     height: 70px;
-    box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
+    align-items: center;
     width: 100%;
+
+    box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
+    
 }
    
 .nav__logo {
-    height: 60px;
+    height: 50px;
     display: flex;
     padding-left: 30px;
 }
 
 section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 40px;
     max-width: 100%;
 
 }
+
+.hero__section {
+    display: flex;
+    flex-direction: column;
+}
+
 .hero{
     display: flex;
     flex-direction: column;
@@ -23,9 +42,9 @@ section {
 }
 .hero__img {
     max-width: 600px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    display: flex;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .hero__title {
@@ -41,6 +60,9 @@ section {
     font-weight: 300;
     font-size: 20px;
     line-height: 110%;
+    margin: 0px 10px;
+
+    font-family: 'Inter';
     
 }
 
@@ -53,12 +75,15 @@ section {
 }
 
 .cards_list {
-    margin-top: -30px;
+    margin: -30px 0 10px 10px;
     display: flex;
     flex-wrap: nowrap;
     gap: 20px;
     overflow-x: auto;
     justify-content: center;
+    flex-direction: row;
+    
+
     
 }
 
@@ -100,15 +125,61 @@ section {
     font-weight: bold;
 }
 
-.footer__content {
-    margin-bottom: -50px;
-    padding-bottom: 0;
-    text-align: center;
+.footer {
+    margin-top: 70px;
     font-weight: 400;
+}
+
+.footer__content {
+    text-align: center;    
 
 }
 
+@media screen and (max-width: 600px) {
+    .hero__img {
+        width: 300px;
+    }
 
+    .cards_list {
+        flex-direction: column;
+    }
+
+    .card__image {
+        width: 75%;
+    }
+
+    .card__badge {
+        font-size: 10px;
+    }
+
+    .card__star {
+        width: 20px;
+    }
+
+    .card__title, .card__price, .card__stats, .hero__content{
+        font-size: 14px;
+    }
+
+    .nav {
+        height: 35px;
+    }
+
+    .nav__logo {
+        height: 25px;
+    }
+
+    .hero__title {
+        font-size: 22px;
+    }
+
+    .hero__content {
+        font-size: 14px;
+    }
+
+    .footer__content{
+        font-size: 12px;
+    }
+}
 
 
 
